# vector-db-project

./: .env.example  .gitignore  LICENSE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: linting.yml  type-checking.yml
backend/: Dockerfile
backend/scripts/: create_tables.py
backend/src/infrastructure/: app_factory.py
backend/src/infrastructure/config/: __init__.py  settings.py
backend/src/infrastructure/database/: models.py  session.py
backend/src/infrastructure/embedding/: __init__.py  service.py
backend/src/infrastructure/indexing/: __init__.py  base.py  ivf.py  linear_search.py  manager.py
backend/src/infrastructure/logging/: __init__.py  config.py  factory.py  formatters.py  handlers.py
backend/src/interfaces/: main.py
backend/src/interfaces/api/: dependencies.py
backend/src/interfaces/api/v1/: __init__.py  chunk.py  document.py  library.py  (+1 more)
backend/src/interfaces/templates/: index.html
backend/src/interfaces/ui/: __init__.py  router.py
backend/src/modules/chunk/: __init__.py  crud.py  models.py  schemas.py  services.py
backend/src/modules/common/: constants.py  schemas.py
backend/src/modules/document/: __init__.py  crud.py  models.py  schemas.py  services.py
backend/src/modules/embedding/: __init__.py  schemas.py  services.py
backend/tests/: conftest.py  test_library_vector_search.py
backend/tests/api/: test_chunk_api.py  test_document_api.py  test_embedding_api.py  test_library_api.py
backend/tests/integration/: test_embedding_integration.py
backend/tests/modules/chunk/: __init__.py  test_service.py
backend/tests/modules/document/: __init__.py  test_service.py
backend/tests/test_embedding/: __init__.py  test_enhanced_services.py  test_service.py
backend/tests/test_indexing/: __init__.py  test_index_manager.py  test_ivf.py  test_ivf_integration.py  test_linear_search.py
(+3 files in other folders)
